# cookie-monster

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  typos.yml
docs/superpowers/specs/: 2026-06-27-prefix-cookies-design.md
src/: axum.rs  error.rs  http.rs  jar.rs  lib.rs  util.rs
src/cookie/: builder.rs  domain.rs  encoding.rs  flags.rs  max_age.rs  mod.rs  options.rs  parse.rs  path.rs  prefix.rs  same_site.rs  serialize.rs
src/cookie/expires/: dep_chrono.rs  dep_jiff.rs  dep_time.rs  mod.rs
tests/: jar.rs  prefix.rs
tests/parse/: attributes.rs  domain.rs  encoded.rs  expires.rs  http_only.rs  max_age.rs  name_value.rs  partitioned.rs  path.rs  same_site.rs  secure.rs  tests.rs  util.rs
tests/serialize/: axum.rs  domain.rs  encoded.rs  expires.rs  http_only.rs  max_age.rs  name_value.rs  partitioned.rs  path.rs  same_site.rs  secure.rs  tests.rs  util.rs
