[package]
name = "cookie-monster"
version = "0.1.0"
authors = ["Joey de Waal <dewaaljoey@gmail.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"
description = "HTTP cookie parsing and cookie jar management."

[features]
percent-encode = ["dep:percent-encoding"]

time = ["dep:time"]
chrono = ["dep:chrono"]
jiff = ["dep:jiff"]


http = ["dep:http", "percent-encode"]
axum = ["dep:axum-core", "http"]


[dependencies]
# Encoding
percent-encoding = { version = "2.3.1", optional = true }

# Expires
time = { version = "0.3",  features = ["std", "parsing", "formatting", "macros"], default-features = false, optional = true }
chrono = { version = "0.4", default-features = false, features = ["std", "now"], optional = true }
jiff = { version = "0.2.15", optional = true }

# Axum integration
axum-core = { version = "0.5.5", optional = true }

# http integration
http = { version = "1.0", optional = true }

# Parse cookie tests
[[test]]
name = "parse"
path = "tests/parse/tests.rs"

# Serialize cookie tests
[[test]]
name = "serialize"
path = "tests/serialize/tests.rs"

# Jar tests
[[test]]
name = "jar"
path = "tests/jar.rs"
