[package]
name = "cookie-monster"
version = "0.1.0"
rust-version = "1.85"
authors = ["Joey de Waal <dewaaljoey@gmail.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A Cookie library for managing HTTP Cookies, with Axum integration."
repository = "https://github.com/joeydewaal/cookie-monster"
documentation = "https://docs.rs/cookie-monster"
keywords = ["cookie", "cookies", "axum", "http"]
categories = ["web-programming"]

[features]
percent-encode = ["dep:percent-encoding"]

time = ["dep:time"]
chrono = ["dep:chrono"]
jiff = ["dep:jiff"]


http = ["dep:http", "percent-encode"]
axum = ["dep:axum-core", "http"]


[dependencies]
# encoding
percent-encoding = { version = "2.3.1", optional = true }

# expires
time = { version = "0.3",  features = ["std", "parsing", "formatting", "macros"], default-features = false, optional = true }
chrono = { version = "0.4",  features = ["std", "now"], default-features = false, optional = true  }
jiff = { version = "0.2", features =["std"], default-features = false, optional = true }

# axum integration
axum-core = { version = "0.5", optional = true }

# http integration
http = { version = "1", optional = true }

[dev-dependencies]
axum = "0.8.6"
jiff = "0.2.15"

[package.metadata.docs.rs]
features = ["percent-encode", "time", "chrono", "jiff", "http", "axum"]

# parse cookie tests
[[test]]
name = "parse"
path = "tests/parse/tests.rs"

# serialize cookie tests
[[test]]
name = "serialize"
path = "tests/serialize/tests.rs"

# jar tests
[[test]]
name = "jar"
path = "tests/jar.rs"
